SSCS-10490 - code tidy - code refactor - changed feature flag